# gen-v

./: README.md  ffi_gen.sh  flutter_rust_bridge.yaml  privacy_policy.md  pubspec.yaml
lib/: main.dart
lib/ffi/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/ffi/api/: ext.dart  simple.dart  simple.freezed.dart
lib/tls/: ca_files_chooser.dart  cipher_selector.dart  generator_form.dart  issuer_selector.dart  models.dart  tls_view.dart
lib/widgets/: chip_group.dart  decorated_form_field.dart  form_controller.dart  form_dialog.dart  radio_group.dart  segmented_group.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Base.lproj/: MainMenu.xib
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/api/: simple.rs
rust/src/crypto/: ecdsa.rs  mod.rs  rsa.rs
rust/src/ffi/: frb_generated.rs  mod.rs
rust/src/tls/: gen.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_gen_x.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_gen_v.podspec  rust_lib_gen_x.podspec
rust_builder/windows/: CMakeLists.txt
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp  win32_window.cpp
