[package]
name = "rust_lib_gen_x"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.81"
chrono = "0.4.35"
const-oid = "0.9.6"
der = "0.7.8"
digest = "0.10.7"
ecdsa = "0.16.9"
elliptic-curve = "0.13.8"
flutter_rust_bridge = "=2.0.0-dev.28"
p224 = "0.13.2"
p256 = "0.13.2"
p384 = "0.13.0"
pkcs8 = "0.10.2"
rand = "0.8.5"
regex = "1.10.3"
rsa = { version = "0.9.6", features = ["sha2"] }
sha2 = "0.10.8"
signature = "2.2.0"
spki = "0.7.3"
x509-cert = { version = "0.2.5", features = ["builder"] }
